// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductImage Debe de mostrar en el componente con el url del producto 1`] = `
<div
  className=" productCard undefined "
>
  <img
    alt="Coffee Mug"
    className="productImg undefined"
    src="./coffee-mug.png"
  />
</div>
`;

exports[`ProductImage Debe usar el url proporcionado 1`] = `
<img
  alt="Coffee Mug"
  className="productImg undefined"
  src="htpp/google.com"
/>
`;
